--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'kotlin'
 apply plugin: 'maven'
 
 sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 kotlin {
     experimental {
